--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.0.0",
     "clsx": "^2.1.0",
+    "csv-parse": "^6.1.0",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.344.0",
     "next": "14.2.0",
