--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clsx": "^2.1.0",
     "csv-parse": "^6.1.0",
     "dotenv": "^17.2.3",
+    "googleapis": "^170.1.0",
     "lucide-react": "^0.344.0",
     "next": "14.2.0",
     "next-auth": "5.0.0-beta.25",
