--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,3 @@
 {
-    "crons": [
-        {
-            "path": "/api/cron/generate-reviews",
-            "schedule": "0 3 * * *"
-        },
-        {
-            "path": "/api/cron/collect-images",
-            "schedule": "0 4 * * *"
-        }
-    ]
+    "crons": []
 }
